--- a/package.json
+++ b/package.json
@@ -67,84 +67,84 @@
   },
   "homepage": "https://github.com/aliyun/oss-nodejs-sdk",
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-transform-regenerator": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/runtime": "^7.11.2",
-    "@types/node": "^14.0.12",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
-    "aliasify": "^2.0.0",
-    "autod": "^2.6.1",
+    "@babel/core": "^7.16.5",
+    "@babel/plugin-transform-regenerator": "^7.16.5",
+    "@babel/plugin-transform-runtime": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "@babel/runtime": "^7.16.5",
+    "@types/node": "^16.11.13",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
+    "aliasify": "^2.1.0",
+    "autod": "^3.1.2",
     "babelify": "^10.0.0",
     "beautify-benchmark": "^0.2.4",
-    "benchmark": "^2.1.1",
-    "bluebird": "^3.1.5",
-    "browserify": "^16.5.2",
+    "benchmark": "^2.1.4",
+    "bluebird": "^3.7.2",
+    "browserify": "^17.0.0",
     "co-fs": "^1.2.0",
-    "core-js": "^3.6.5",
-    "crypto-js": "^3.1.9-1",
-    "dotenv": "^8.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-ali": "^9.0.2",
-    "eslint-plugin-import": "^2.21.1",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
+    "core-js": "^3.19.3",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^10.0.0",
+    "eslint": "^8.4.1",
+    "eslint-config-airbnb": "^19.0.2",
+    "eslint-config-ali": "^13.0.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.27.1",
     "filereader": "^0.10.3",
-    "git-pre-hooks": "^1.2.0",
+    "git-pre-hooks": "^1.2.1",
     "immediate": "^3.3.0",
-    "karma": "^6.3.4",
-    "karma-browserify": "^5.1.1",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-firefox-launcher": "^1.0.1",
+    "karma": "^6.3.9",
+    "karma-browserify": "^8.1.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-firefox-launcher": "^2.1.2",
     "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^2.0.1",
     "karma-safari-launcher": "^1.0.0",
-    "lint-staged": "^9.5.0",
-    "mm": "^2.0.0",
-    "mocha": "^9.1.2",
+    "lint-staged": "^12.1.2",
+    "mm": "^3.2.0",
+    "mocha": "^9.1.3",
     "nyc": "^15.1.0",
     "promise-polyfill": "^6.0.2",
-    "puppeteer": "^10.4.0",
-    "request": "^2.88.0",
-    "should": "^11.0.0",
-    "sinon": "^1.17.7",
-    "snyk": "^1.727.0",
-    "standard-version": "^9.3.1",
-    "stream-equal": "^1.1.0",
-    "timemachine": "^0.3.0",
+    "puppeteer": "^13.0.0",
+    "request": "^2.88.2",
+    "should": "^13.2.3",
+    "sinon": "^12.0.1",
+    "snyk": "^1.792.0",
+    "standard-version": "^9.3.2",
+    "stream-equal": "^2.0.1",
+    "timemachine": "^0.3.2",
     "typescript": "^3.9.5",
-    "uglify-js": "^3.14.2",
-    "watchify": "^3.11.1"
+    "uglify-js": "^3.14.5",
+    "watchify": "^4.0.0"
   },
   "dependencies": {
-    "address": "^1.0.0",
-    "agentkeepalive": "^3.4.1",
-    "bowser": "^1.6.0",
+    "address": "^1.1.2",
+    "agentkeepalive": "^4.1.4",
+    "bowser": "^2.11.0",
     "co-defer": "^1.0.0",
     "copy-to": "^2.0.1",
     "dateformat": "^2.0.0",
-    "debug": "^2.2.0",
+    "debug": "^4.3.3",
     "destroy": "^1.0.4",
     "end-or-error": "^1.0.1",
-    "get-ready": "^1.0.0",
-    "humanize-ms": "^1.2.0",
-    "is-type-of": "^1.0.0",
-    "js-base64": "^2.5.2",
-    "jstoxml": "^2.0.0",
+    "get-ready": "^2.0.1",
+    "humanize-ms": "^1.2.1",
+    "is-type-of": "^1.2.1",
+    "js-base64": "^3.7.2",
+    "jstoxml": "^2.2.6",
     "merge-descriptors": "^1.0.1",
-    "mime": "^2.4.5",
+    "mime": "^3.0.0",
     "mz-modules": "^2.1.0",
-    "platform": "^1.3.1",
+    "platform": "^1.3.6",
     "pump": "^3.0.0",
-    "sdk-base": "^2.0.1",
-    "stream-http": "2.8.2",
-    "stream-wormhole": "^1.0.4",
-    "urllib": "^2.33.1",
-    "utility": "^1.8.0",
-    "xml2js": "^0.4.16"
+    "sdk-base": "^3.6.0",
+    "stream-http": "3.2.0",
+    "stream-wormhole": "^1.1.0",
+    "urllib": "^2.38.0",
+    "utility": "^1.17.0",
+    "xml2js": "^0.4.23"
   },
   "snyk": true,
   "lint-staged": {
